# arcnet

./: .env.example  .gitignore  README.md  pyproject.toml
agents/: pyproject.toml
agents/arcnet_agents/: __init__.py  agent_j.py  app.py  tools.py
agents/hq_agent/: __init__.py  __main__.py  agent.py  prompt.md
agents/prompts/: j.md
agents/scenarios/: __init__.py  runner.py
agents/scenarios/fixtures/: customers.json  shipping_poisoned.html
agents/tests/: test_guard_scenarios.py  test_hq_agent.py  test_s1_fixture.py  test_unplug_coverage_matrix.py
deploy/: README.md  casting.yaml  docker-compose.yaml
docs/: 00-hackathon-brief.md  01-product.md  02-architecture.md  03-plan.md  04-signoz-integration.md  05-unplug-integration.md  06-demo-script.md  07-griffin-anomaly.md  08-vision-v2.md  09-frontend.md  10-time-machine.md  11-scenarios.md  12-data-api.md  13-phase6-api-read-models.md  14-product-guide.md  15-product-map.md  16-product-review-brief.md  17-product-rework-plan.md  18-hq-agent.md  19-path-to-95.md  20-honest-progress.md  21-next-phases-plan.md  22-next-agent-packets.md  23-product-overview.md  24-ship-week-plan.md  25-frontend-map.md  log.md  (+8 more)
sdk/: pyproject.toml
sdk/arcnet/: __init__.py  context.py  guard_factory.py  guardrail.py  hq.py  hq_tools.py  ids.py  init.py  model_explore.py  pricing.py  replay.py  signals.py  telemetry.py  transcript.py
sdk/tests/: test_guard_factory.py  test_pricing.py  test_replay.py
server/: pyproject.toml
server/arcnet_server/: __init__.py  bus.py  db.py  errors.py  griffin.py  main.py  model_catalog.py  read_models.py  replay_service.py  repository.py  tabfm_worker.py
server/tests/: test_agent_twins_p8b.py  test_api_coherence.py  test_case_file.py  test_griffin_cold_soak.py  test_hitl_api.py  test_hq_agent.py  test_hq_tool_error_matrix.py  test_model_intelligence.py  test_phase3_evidence.py  test_phase4_live_ops.py  test_product_rework_api.py  test_r2_r3_surface.py  test_read_models.py  test_replay_service.py  test_robustness_pass.py  test_tabfm_griffin.py  test_tabfm_worker_stub.py  test_unplug_verdict_metadata.py  test_wave_a.py  test_wave_b.py  test_webhook_harden.py
server/tests/fixtures/: query_range_mixed.json  query_range_non_span.json  query_range_span_like.json
(+80 files in other folders)
