[project]
name = "arcnet-agents"
version = "0.1.0"
description = "ArcNet demo fleet + Bug Suite (never imported by sdk/server/hq)"
requires-python = ">=3.12"
dependencies = [
  "arcnet",
  "agno==2.7.4",
  "openai>=1.40.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.32",
  "unplug-ai==0.5.2",
]

[tool.uv.sources]
arcnet = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arcnet_agents", "hq_agent"]
