[project]
name = "arcnet"
version = "0.1.0"
description = "ArcNet SDK — OTel init, UnplugGuardrail, signals, replay harness"
requires-python = ">=3.12"
dependencies = [
  "agno==2.7.4",
  "unplug-ai==0.5.2",
  "openinference-instrumentation-agno==0.1.38",
  "opentelemetry-api>=1.20.0",
  "opentelemetry-sdk>=1.20.0",
  "opentelemetry-exporter-otlp-proto-http>=1.20.0",
  "opentelemetry-instrumentation-httpx>=0.40b0",
  "openai>=1.40.0",
  "httpx>=0.27.0",
  "sseclient-py>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arcnet"]
