[project]
name = "arcnet-server"
version = "0.1.0"
description = "ArcNet server — signals, Griffin, agent-view, Time Machine"
requires-python = ">=3.12"
dependencies = [
  "arcnet",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "sse-starlette>=2.0.0",
]

[tool.uv.sources]
arcnet = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arcnet_server"]
